Racing Offline Wercker vs. Online Wercker - Offline has Head Start of 45 seconds

--- a/wercker.yml
+++ b/wercker.yml
@@ -2,8 +2,14 @@ box: debian
 build:
   steps:
     - script:
+        name: Install Software Properties (To Add Repos - Only Works on Mainstream Distributions for Mainstream Only Repos - No Overrides)
+        code: apt-get update && apt-get install -y software-properties-common
+    - script:
+        name: Add Repo (with Jessie-Backports for OpenJDK-8)
+        code: apt-add-repository -s 'deb http://deb.debian.org/debian jessie-backports main'
+    - script:
         name: Install Tools
-        code: apt-get update && apt-get install -y openjdk-7-jre-headless openjdk-7-jdk && rm -rf /var/lib/apt/lists/*
+        code: apt-get update && apt-get install -y openjdk-8-jre-headless openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
     - script:
         name: Compile and Jar Utilities
         code: cd ./src/jar/ && javac -encoding UTF-8 $(find | grep "\.java") && jar -cf ../utilities.jar $(find | grep "\.class")
@@ -24,7 +30,7 @@ build:
         code: cd ./src/ && javac -cp ".:/usr/lib/senor/utilities.jar" main.java
     - script:
         name: Test Demo
-        code: cd ./src/ && java -cp ".:/usr/lib/senor/utilities.jar" main.java
+        code: cd ./src/ && java -cp ".:/usr/lib/senor/utilities.jar" main
 
 deploy:
   #steps: #steps is to deploy when a branch that does not exist is called.
