--- a/wercker.yml
+++ b/wercker.yml
@@ -46,10 +46,10 @@ deploy:
         code: mv ./src/utilities.jar .
     - script:
         name: Create Tar
-        code: tar cfv binaries-v$(./version).tar ./utilities.jar ./sc-utility-jar.deb
+        code: tar cfv binaries-v$(./version).tar utilities.jar sc-utility-jar.deb
     - script:
         name: Create Zip
-        code: zip -j binaries-v$(./version).zip ./utilities.jar ./sc-utility-jar.deb
+        code: zip -j binaries-v$(./version).zip utilities.jar sc-utility-jar.deb
     - script:
         name: Versioning
         code: export APP_VERSION=$(./version)
@@ -76,10 +76,10 @@ deploy:
         code: mv ./src/utilities.jar .
     - script:
         name: Create Tar
-        code: tar cfv binaries-v$(./version)-nightly$(echo $TIME).tar ./utilities.jar ./sc-utility-jar.deb
+        code: tar cfv binaries-v$(./version)-nightly$(echo $TIME).tar utilities.jar sc-utility-jar.deb
     - script:
         name: Create Zip
-        code: zip -j binaries-v$(./version)-nightly$(echo $TIME).zip ./utilities.jar ./sc-utility-jar.deb
+        code: zip -j binaries-v$(./version)-nightly$(echo $TIME).zip utilities.jar sc-utility-jar.deb
     - script:
         name: Versioning
         code: export APP_VERSION=$(./version)
