Trying New Control Creation

--- a/wercker.yml
+++ b/wercker.yml
@@ -33,9 +33,34 @@ deploy:
     - script:
         name: Create Needed Directories (as Git removes them for being empty)
         code: mkdir -p ./Utilities/usr/lib/senor/
+
+    # Create Control File
     - script:
-        name: Create control file
-        code: echo -e "Test" > ./Utilities/DEBIAN/control
+        name: Write Package Name
+        code: echo 'Package: sc-utility-jar' > ./Utilities/DEBIAN/control
+    - script:
+        name: Add Version Number
+        code: echo 'Version: 0.0.1' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Architecture
+        code: echo 'Architecture: all' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Essential Tag
+        code: echo 'Essential: no' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Section
+        code: echo 'Section: development' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Priority Tag
+        code: echo 'Priority: optional' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add My Name
+        code: echo 'Maintainer: Brandon Gomez' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Description
+        code: echo 'Description: Brandon's Utility Library' >> ./Utilities/DEBIAN/control
+    # End Create Control File
+
     - script:
         name: Put into Debian Package
         code: cp ./utilities.jar ./Utilities/usr/lib/senor/
@@ -101,9 +126,34 @@ deploy:
     - script:
         name: Create Needed Directories (as Git removes them for being empty)
         code: mkdir -p ./Utilities/usr/lib/senor/
+
+    # Create Control File
     - script:
-        name: Create control file
-        code: echo -e "Test" > ./Utilities/DEBIAN/control
+        name: Write Package Name
+        code: echo 'Package: sc-utility-jar' > ./Utilities/DEBIAN/control
+    - script:
+        name: Add Version Number
+        code: echo 'Version: 0.0.1' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Architecture
+        code: echo 'Architecture: all' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Essential Tag
+        code: echo 'Essential: no' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Section
+        code: echo 'Section: development' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Priority Tag
+        code: echo 'Priority: optional' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add My Name
+        code: echo 'Maintainer: Brandon Gomez' >> ./Utilities/DEBIAN/control
+    - script:
+        name: Add Description
+        code: echo 'Description: Brandon's Utility Library' >> ./Utilities/DEBIAN/control
+    # End Create Control File
+
     - script:
         name: Put into Debian Package
         code: cp ./utilities.jar ./Utilities/usr/lib/senor/
