Added Ruby to APT Install

--- a/wercker.yml
+++ b/wercker.yml
@@ -28,7 +28,7 @@ deploy:
         code: apt-add-repository -s 'deb http://deb.debian.org/debian jessie-backports main'
     - script:
         name: Install Tools
-        code: apt-get update && apt-get install -y curl file zip openjdk-8-jre-headless openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
+        code: apt-get update && apt-get install -y curl file zip openjdk-8-jre-headless openjdk-8-jdk ruby && rm -rf /var/lib/apt/lists/*
     - script:
         name: Move Jar for Tar Command
         code: mv ./src/utilities.jar .
@@ -124,7 +124,7 @@ deploy:
         code: apt-add-repository -s 'deb http://deb.debian.org/debian jessie-backports main'
     - script:
         name: Install Tools
-        code: apt-get update && apt-get install -y curl file zip openjdk-8-jre-headless openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
+        code: apt-get update && apt-get install -y curl file zip openjdk-8-jre-headless openjdk-8-jdk ruby && rm -rf /var/lib/apt/lists/*
     - script:
         name: Date Time Variable
         code: export TIME=$(date +%s)
