--- a/wercker.yml
+++ b/wercker.yml
@@ -199,7 +199,7 @@ deploy:
         code: export APP_VERSION=$(./version)
     - github-create-release:
         token: $GITHUB_TOKEN
-        pre_release: true
+        prerelease: true
         tag: v$(echo $APP_VERSION)-nightly$(echo $TIME)
     - github-upload-asset:
         token: $GITHUB_TOKEN
